--- a/app/src/main/res/layout/activity_grogshop_detail.xml
+++ b/app/src/main/res/layout/activity_grogshop_detail.xml
@@ -33,11 +33,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:contentInsetLeft="0dp"
-                app:contentInsetStart="0dp"
+                android:layout_height="?android:attr/actionBarSize"
                 app:layout_collapseMode="pin" />
 
 
