--- a/app/src/main/res/layout/activity_grogshop_detail.xml
+++ b/app/src/main/res/layout/activity_grogshop_detail.xml
@@ -32,6 +32,7 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
+                app:contentInsetStart="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 app:layout_collapseMode="pin" />
@@ -42,7 +43,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.ding.PullScrollView
+    <com.ding.widget.PullScrollView
         android:id="@+id/pullscrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,7 +61,7 @@
                 android:visibility="gone" />
 
 
-            <com.ding.BodyTableLayout
+            <com.ding.widget.BodyTableLayout
                 android:id="@+id/rl_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -263,11 +264,11 @@
                         style="@style/text_right_style"
                         android:text="90-120度" />
                 </TableRow>
-            </com.ding.BodyTableLayout>
+            </com.ding.widget.BodyTableLayout>
 
 
         </RelativeLayout>
-    </com.ding.PullScrollView>
+    </com.ding.widget.PullScrollView>
 
     <RelativeLayout
         android:id="@+id/rl_open_iv"
